--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>WikiViewer</h1>
-  <div class="search-area">
-    <form>
-      <input type="text" id="search" name="search" placeholder="Search..">
-      <input type="button" id="searchButton" name="search" value="search">
-    </form>
-    <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="randomButton">Random</a>
+  <div class="container-fluid">
+    <div class="search-area">
+      <form>
+        <input type="text" id="search" name="search" placeholder="Search..">
+        <input type="button" id="searchButton" name="search" value="search">
+      </form>
+      <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="randomButton">Random</a>
+    </div>
+
+
+    <div class="list">
+      <ul id="wikilist"></ul>
+    </div>
   </div>
-  
-  <ul id="wikilist"></ul>
-  
   <footer class="footer">
     <p>By <a href='https://www.freecodecamp.com/cryder9898' target='_blank'>Christopher Ryder</a></p>
   </footer>
-    
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
