--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Local Weather App</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link
     rel="stylesheet"
@@ -13,16 +13,20 @@
 </head>
 <body>
   <h1>WikiViewer</h1>
-  <div class="container-fluid">
-    <div class="search-area">
-      <form>
-        <input type="text" id="search" name="search" placeholder="Search..">
-        <input type="button" id="searchButton" name="search" value="search">
-      </form>
-      <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="randomButton">Random</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="search-area">
+          <form>
+            <input type="text" id="search" name="search" placeholder="Search..">
+            <input type="button" id="searchButton" name="search" value="search">
+          </form>
+          <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="randomButton">Random</a>
+        </div>
+      </div>
+      <div class="col-md-3"></div>
     </div>
-
-
     <div>
       <ul id="wikilist"></ul>
     </div>
